fix: textalign right

--- a/src/client/theme-default/builtins/SourceCode/index.less
+++ b/src/client/theme-default/builtins/SourceCode/index.less
@@ -100,8 +100,8 @@
 
       & > .token-line-num {
         display: table-cell;
-        text-align: left;
-        padding-right: 16px;
+        text-align: right;
+        padding-right: 1em;
         user-select: none;
         opacity: 0.5;
       }
